Handle more error cases.